--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,8 @@
 {
-    "Тестовый пример": "Тестовый пример",
-    "Перевод": "Перевод",
-    "Язык": "Русский"
+  "Тестовый пример": "Тестовый пример",
+  "Перевод": "Перевод",
+  "Язык": "Русский",
+  "Главная": "Главная",
+  "О себе": "О себе",
+  "toggle": "переключить"
 }
