modify Sidebar, navlink, loki

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "Язык": "English",
   "Главная": "Main",
   "О себе": "About us",
-  "toggle": "toggle"
+  "toggle": "toggle",
+  "Короткий язык": "En"
 }
