--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,6 @@
   "Язык": "Русский",
   "Главная": "Главная",
   "О себе": "О себе",
-  "toggle": "переключить"
+  "toggle": "переключить",
+  "Короткий язык": "Ru"
 }
