--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Главная": "Main",
   "О себе": "About us",
   "toggle": "toggle",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "Войти": "LOGIN"
 }
