--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,9 @@
   "О себе": "О себе",
   "toggle": "переключить",
   "Короткий язык": "Ru",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Вы ввели не правильный логин или пароль": "Вы ввели не правильный логин или пароль",
+  "Введите логин": "Введите логин",
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации"
 }
