--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,12 +3,13 @@
   "Перевод": "Перевод",
   "Язык": "Русский",
   "Главная": "Главная",
-  "О себе": "О себе",
+  "О сайте": "О сайте",
   "toggle": "переключить",
   "Короткий язык": "Ru",
   "Войти": "Войти",
   "Вы ввели не правильный логин или пароль": "Вы ввели не правильный логин или пароль",
   "Введите логин": "Введите логин",
   "Введите пароль": "Введите пароль",
-  "Форма авторизации": "Форма авторизации"
+  "Форма авторизации": "Форма авторизации",
+  "Профиль": "Профиль"
 }
