--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,7 @@
   "toggle": "toggle",
   "Короткий язык": "En",
   "Войти": "LOGIN",
+  "Выйти": "LOGOUT",
   "Вы ввели не правильный логин или пароль": "You login or password encorrect",
   "Введите логин": "Login",
   "Введите пароль": "Password",
