--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "toggle": "переключить",
   "Короткий язык": "Ru",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Вы ввели не правильный логин или пароль": "Вы ввели не правильный логин или пароль",
   "Введите логин": "Введите логин",
   "Введите пароль": "Введите пароль",
