--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,1 +1,6 @@
-{}
+{
+    "Профиль": "Profile",
+    "Редактировать": "Edit",
+    "Ваше имя:": "Your name:",
+    "Ваша фамилия:": "Your lastname:"
+}
